--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -155,6 +155,22 @@ body::-webkit-scrollbar-thumb:hover{
     column-gap: 30px;
 }
 
+.navbar-overlay{
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 66px;
+    height: calc(100vh - 66px);
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .15s linear;
+    -webkit-transition: all .15s linear;
+    -moz-transition: all .15s linear;
+    -ms-transition: all .15s linear;
+    -o-transition: all .15s linear;
+}
+
 .navbar__link{
     position: relative;
 }
@@ -519,6 +535,7 @@ body::-webkit-scrollbar-thumb:hover{
 
 .produk__box-image{
     padding: 10px 20px;
+    min-width: 200px;
     height: 180px;
     display: grid;
     place-items: center;
@@ -819,13 +836,15 @@ body::-webkit-scrollbar-thumb:hover{
 
     .navbar ul{
         position: absolute;
-        z-index: -2;
+        z-index: 9;
         padding: 30px;
         width: 30%;
         height: calc(100vh - 66px);
         top: 66px;
         right: -500px;
         background-color: var(--background);
+        border: 1px solid var(--secondary);
+        border-radius: 15px 0 0 15px;
         flex-direction: column;
         gap: 30px;
         transition: all .3s linear;
@@ -833,10 +852,23 @@ body::-webkit-scrollbar-thumb:hover{
         -moz-transition: all .3s linear;
         -ms-transition: all .3s linear;
         -o-transition: all .3s linear;
-}
+        -webkit-border-radius: 15px 0 0 15px;
+        -moz-border-radius: 15px 0 0 15px;
+        -ms-border-radius: 15px 0 0 15px;
+        -o-border-radius: 15px 0 0 15px;
+    }
+
+    .navbar-overlay.show{
+        visibility: visible;
+        opacity: 1;
+    }
 
     .navbar ul.show{
         right: 0;
+    }
+
+    .navbar__link{
+        font-size: var(--fs-subtitle);
     }
 
     .navbar__link::after{
@@ -953,7 +985,7 @@ body::-webkit-scrollbar-thumb:hover{
     }
 
     .navbar ul{
-        width: 50%;
+        width: 60%;
     }
 
     .section-header{
@@ -963,6 +995,7 @@ body::-webkit-scrollbar-thumb:hover{
     }
 
     #produk .section-title{
+        text-align: center;
         transform: translateX(0) translateY(-50px);
         -webkit-transform: translateX(0) translateY(-50px);
         -moz-transform: translateX(0) translateY(-50px);
@@ -984,5 +1017,11 @@ body::-webkit-scrollbar-thumb:hover{
         -moz-transform: translateY(0);
         -ms-transform: translateY(0);
         -o-transform: translateY(0);
+    }
+}
+
+@media(max-width:468px){
+    .footer__center{
+        display: none;
     }
 }
